--- a/style.css
+++ b/style.css
@@ -21,8 +21,15 @@ header {
     text-align: left;
     padding-left: 20px;
     padding-right: 20px;
-	margin:5px 0 50px 0;
-	
+	margin:25px 0 70px 0;
+}
+
+.upcontent {
+	font-size: 18px;
+	color: rgb(226, 205, 180);
+	padding-left: 20px;
+    padding-right: 20px;
+	text-align: center;
 }
 
 
@@ -394,4 +401,8 @@ footer {
     font-weight: normal;
     letter-spacing: 0.5px;
 	font-size: 16px;
+}
+
+.prodano {
+	color:rgb(15, 133, 15);
 }
