--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@ header {
 }
 
 
-
-
 /* Меню шапки */
 .menu-main {
     list-style: none;
@@ -126,7 +124,7 @@ header {
 }
 /* Конец меню шапки */
 
-article {
+main {
  display: flex;
  flex-direction: column;
     align-items: center;
@@ -136,7 +134,6 @@ article {
 #upimg {
 	max-width: 100%;
 }
-
 
 
 /* Слайд-шоу карусель */
@@ -329,9 +326,6 @@ video {
 	background-color: black;
 }
 
-
-
-/* Футер сайта */
 
 footer {
 	display: flex;
