--- a/style.css
+++ b/style.css
@@ -300,8 +300,7 @@ li {
     font-weight: normal;
     letter-spacing: 1px;
     margin-top: 100px;
-	
-
+		font-size: 24px;
 }
 
 .textproduct {
@@ -311,10 +310,10 @@ li {
     font-size: 17px;
     color: white;
     font-weight: normal;
-	background-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(255, 255, 255, 0.45);
     border-radius: 2px;
-	color:black;
-	margin-top: 5px;
+    color:black;
+    margin-top: 5px;
 }
 
 video {
