--- a/style.css
+++ b/style.css
@@ -1,416 +1,411 @@
 body {
-    background-image: url(images/2.png);
-    margin: 0;
+  background-image: url(images/2.png);
+  margin: 0;
 }
 
 html {
-	scroll-behavior: smooth; 
-  }
+  scroll-behavior: smooth;
+}
 
 header {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .content {
-    font-family: 'Arial', sans-serif;
-    font-size: 17.4px;
-    font-weight:lighter;
-    color: rgba(255, 255, 255, 0.774);
-    letter-spacing: 1px;
-    text-align: left;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin:25px 0 70px 0;
-    line-height: 1.4;
+  font-family: "Arial", sans-serif;
+  font-size: 17.4px;
+  font-weight: lighter;
+  color: rgba(255, 255, 255, 0.774);
+  letter-spacing: 1px;
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 25px 0 70px 0;
+  line-height: 1.4;
 }
 
 .upcontent {
-	font-size: 18px;
-	color: rgb(226, 205, 180);
-	padding-left: 20px;
-    padding-right: 20px;
-	text-align: center;
+  font-size: 18px;
+  color: rgb(226, 205, 180);
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
 }
-
 
 /* Меню шапки */
 .menu-main {
-    list-style: none;
-    margin: 40px 0 15px;
-    padding: 23px 0 5px;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.3);
+  list-style: none;
+  margin: 40px 0 15px;
+  padding: 23px 0 5px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .menu-main li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .menu-main li:after {
-    content: "|";
-    color: black;
-    display: inline-block;
-    vertical-align: top;
+  content: "|";
+  color: black;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .menu-main li:last-child:after {
-    content: none;
+  content: none;
 }
 
 .menu-main a {
-    text-decoration: none;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 2px;
-    position: relative;
-    padding-bottom: 14px;
-    margin: 0 34px 0 30px;
-    font-size: 16px;
-    text-transform: uppercase;
-    display: inline-block;
-    transition: color .2s;
+  text-decoration: none;
+  font-family: "Arial", sans-serif;
+  letter-spacing: 2px;
+  position: relative;
+  padding-bottom: 14px;
+  margin: 0 34px 0 30px;
+  font-size: 16px;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: color 0.2s;
 }
 
 .menu-main a,
 .menu-main a:visited {
-    color: black;
+  color: black;
 }
 
 .menu-main a.current,
 .menu-main a:hover {
-    color: rgb(65, 40, 16);
+  color: rgb(65, 40, 16);
 }
 
 .menu-main a:before,
 .menu-main a:after {
-    content: "";
-    position: absolute;
-    height: 2.5px;
-    top: auto;
-    right: 50%;
-    bottom: -5px;
-    left: 50%;
-    background: rgb(65, 40, 16);
-    transition: .8s;
+  content: "";
+  position: absolute;
+  height: 2.5px;
+  top: auto;
+  right: 50%;
+  bottom: -5px;
+  left: 50%;
+  background: rgb(65, 40, 16);
+  transition: 0.8s;
 }
 
 .menu-main a:hover:before,
 .menu-main .current:before {
-    left: 0;
+  left: 0;
 }
 
 .menu-main a:hover:after,
 .menu-main .current:after {
-    right: 0;
+  right: 0;
 }
 
 @media (max-width: 550px) {
-    .menu-main {
-        padding-top: 0;
-    }
+  .menu-main {
+    padding-top: 0;
+  }
 
-    .menu-main li {
-        display: block;
-    }
+  .menu-main li {
+    display: block;
+  }
 
-    .menu-main li:after {
-        content: none;
-    }
+  .menu-main li:after {
+    content: none;
+  }
 
-    .menu-main a {
-        padding: 25px 0 20px;
-        margin: 0 30px;
-    }
+  .menu-main a {
+    padding: 25px 0 20px;
+    margin: 0 30px;
+  }
 }
 /* Конец меню шапки */
 
 main {
- display: flex;
- flex-direction: column;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #upimg {
-	max-width: 100%;
+  max-width: 100%;
 }
-
 
 /* Слайд-шоу карусель */
 
 * {
-    box-sizing: border-box
+  box-sizing: border-box;
 }
 
 /* Slideshow container */
 .slideshow-container {
-	max-width: 1000px;
-    min-width: 250px;
-    position: relative;
-    margin: auto;
-	margin: 0px 30px 0 30px;
+  max-width: 1000px;
+  min-width: 250px;
+  position: relative;
+  margin: auto;
+  margin: 0px 30px 0 30px;
 }
 
 /* Hide the images by default */
 .mySlides {
-    display: none;
+  display: none;
 }
 
 .foto {
-    border-radius: 20px;
-	width: 100%;
-    border-style: groove;
-    border-width: 15px;
-    border-color: gray;
+  border-radius: 20px;
+  width: 100%;
+  border-style: groove;
+  border-width: 15px;
+  border-color: gray;
 }
 
 /* Next & previous buttons */
 .prev,
 .next {
-    cursor: pointer;
-    position: absolute;
-    top: 45%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 5vw;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  position: absolute;
+  top: 45%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 5vw;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
 }
 
 /* Position the "next button" to the right */
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
 .active,
 .dot:hover {
-    background-color: #717171;
+  background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
+  from {
+    opacity: 0.4;
+  }
 
-    to {
-        opacity: 1
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-    from {
-        opacity: .4
-    }
+  from {
+    opacity: 0.4;
+  }
 
-    to {
-        opacity: 1
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Конец слайд-шоу карусель */
 
-
 /* В наличии */
 
 .images {
-	padding: 0;
+  padding: 0;
 }
 
 .images1 img {
-    width: 300px;
-    height: 200px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgba(255, 255, 255, 0.527);
-	margin-top: 40px;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgba(255, 255, 255, 0.527);
+  margin-top: 40px;
 }
 
 .images2 img {
-	width: 300px;
-    height: 120px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgba(255, 255, 255, 0.527);
+  width: 300px;
+  height: 120px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgba(255, 255, 255, 0.527);
 }
 
 .visible {
-    cursor: pointer;
-		transition: transform 0.45s ease;
+  cursor: pointer;
+  transition: transform 0.45s ease;
 }
 
 .visible:hover {
-	transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 #available {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-	gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 50px;
 }
 
 #textguslivnal {
-    text-align: center;
-    color: rgba(255, 255, 255, 0.877);
-    font-family: 'Arial', sans-serif;
-    font-weight: normal;
-    letter-spacing: 1px;
-    margin-top: 100px;
-		font-size: 22px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.877);
+  font-family: "Arial", sans-serif;
+  font-weight: normal;
+  letter-spacing: 1px;
+  margin-top: 100px;
+  font-size: 22px;
 }
 
 .textproduct {
-    width: 300px;
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-    font-size: 17px;
-    color: white;
-    font-weight: normal;
-    background-color: rgba(255, 255, 255, 0.45);
-    border-radius: 2px;
-    color:black;
-    margin-top: 5px;
+  width: 300px;
+  text-align: center;
+  font-family: "Arial", sans-serif;
+  font-size: 17px;
+  color: white;
+  font-weight: normal;
+  background-color: rgba(255, 255, 255, 0.45);
+  border-radius: 2px;
+  color: black;
+  margin-top: 5px;
 }
 
 video {
-	margin-top: 100px;
-	width: 300px;
-	height: 200px;
-	border: rgba(255, 255, 255, 0.527) solid 3px;
-	border-radius:10px;
-	background-color: black;
+  margin-top: 100px;
+  width: 300px;
+  height: 200px;
+  border: rgba(255, 255, 255, 0.527) solid 3px;
+  border-radius: 10px;
+  background-color: black;
 }
 
-
 footer {
-	display: flex;
-	flex-direction: column;
-    margin-top: 100px;
-    border-top: 3px ridge rgba(255, 255, 255, 0.76);
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  border-top: 3px ridge rgba(255, 255, 255, 0.76);
 }
 
 .footer-block1 {
-	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-	gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 50px;
 }
 
 .footer-date {
-	margin-top: 30px;
-	text-align: center;
-	font-size: 13px;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 13px;
 }
 
 #contacts {
-	padding: 10px;
-    width: 300px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-family: 'Arial', sans-serif;
-    font-weight: normal;
-    font-size: 12.5px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items:center;
-    background-color: rgba(255, 255, 255, 0.25);
-    border-radius: 15px;
+  padding: 10px;
+  width: 300px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-family: "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 12.5px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 15px;
 }
 
 #contactsjump {
-	font-size: 18px;
+  font-size: 18px;
 }
 
 #contacts a {
-	font-size: 14.5px;
+  font-size: 14.5px;
 }
 
 #contacts h3 {
-	margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
 }
 
 #contacts h2 {
-	margin: 5px;
+  margin: 5px;
 }
 
 .center {
   display: flex;
   align-items: center;
   text-decoration: none;
-	color:rgba(12, 12, 12, 0.8);
+  color: rgba(12, 12, 12, 0.8);
 }
 
 .comment {
-	width: 300px;
+  width: 300px;
 }
 
 #reviews {
-	text-align: center;
-    color: rgba(255, 255, 255, 0.877);
-    font-family: 'Arial', sans-serif;
-    font-weight: normal;
-    letter-spacing: 1px;
-	font-size: 19px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.877);
+  font-family: "Arial", sans-serif;
+  font-weight: normal;
+  letter-spacing: 1px;
+  font-size: 19px;
 }
 
 .text-review {
-	width: 300px;
-	text-align: center;
-    color: rgba(255, 255, 255, 0.877);
-    font-family: 'Arial', sans-serif;
-    font-weight: normal;
-    letter-spacing: 0.5px;
-	font-size: 16px;
+  width: 300px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.877);
+  font-family: "Arial", sans-serif;
+  font-weight: normal;
+  letter-spacing: 0.5px;
+  font-size: 16px;
 }
 
 .prodano {
-	color:rgb(15, 133, 15);
+  color: rgb(15, 133, 15);
 }
