--- a/style.css
+++ b/style.css
@@ -168,11 +168,11 @@ main {
   position: absolute;
   top: 45%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
+  margin-top: -16px;
+  padding: 10px;
   color: white;
   font-weight: bold;
-  font-size: 5vw;
+  font-size: 3.5vw;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
 }
@@ -353,6 +353,7 @@ footer {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  row-gap: 12px;
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: 15px;
 }
