--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ header {
   line-height: 1.4;
 }
 
+.content a {
+  color: #a780cb;
+}
+
 .upcontent {
   font-size: 18px;
   color: rgb(226, 205, 180);
