--- a/pages/lira/lira.css
+++ b/pages/lira/lira.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
     background-image: url(../../images/2.png);
     margin: 0;
@@ -10,6 +14,12 @@ body {
   header {
     width: 100%;
     height: auto;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .content {
@@ -28,14 +38,9 @@ body {
   .content a {
     color: #a780cb;
   }
+
+
   
-  .upcontent {
-    font-size: 18px;
-    color: rgb(226, 205, 180);
-    padding-left: 20px;
-    padding-right: 20px;
-    text-align: center;
-  }
   
   /* Меню шапки */
   .menu-main {
@@ -127,21 +132,10 @@ body {
   }
   /* Конец меню шапки */
   
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  #upimg {
-    max-width: 100%;
-  }
+
   
   /* Слайд-шоу карусель */
   
-  * {
-    box-sizing: border-box;
-  }
   
   /* Slideshow container */
   .slideshow-container {
@@ -291,8 +285,10 @@ body {
   li {
     list-style: none;
   }
+
   
   #available {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -437,5 +433,36 @@ body {
   
   .prodano {
     color: rgb(15, 133, 15);
+  }
+
+  .div-language {
+    text-align: center;
+    color:rgba(255, 255, 255, 0.88);
+    margin-top: 15px;
+    font-size: 16px;
+  }
+  
+  .div-language a {
+    text-decoration: none;
+    background-color:rgba(255, 255, 255, 0.88);
+    border-radius: 3px;
+    color: black;
+    font-size: 17px;
+    padding: 0px 5px 2px 5px;
+    margin-right: 3px;
+  }
+  
+  .div-language a:hover {
+    background-color: rgba(196, 234, 171, 0.877);
+  }
+  
+  .span-active-lang {
+    text-decoration: none;
+    background-color:rgba(196, 234, 171, 0.877);
+    border-radius: 3px;
+    color: black;
+    font-size: 17px;
+    padding: 0px 5px 2px 5px;
+    margin-right: 3px;
   }
   
