--- a/pages/lang.css
+++ b/pages/lang.css
@@ -140,7 +140,7 @@ body {
     font-size: 17px;
   }
   
-  video {
+  .video {
     width: 300px;
     height: 200px;
     border: rgba(255, 255, 255, 0.527) solid 3px;
