--- a/pages/lira/lira.css
+++ b/pages/lira/lira.css
@@ -407,6 +407,10 @@ body {
   .contacts-icon-img {
     width: 22px;
   }
+
+  .vk-icon-img {
+    width: 25px;
+  }
   
   .comment {
     width: 300px;
