--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
   text-align: left;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 25px 0 70px 0;
+  margin: 25px 0 20px 0;
   line-height: 1.4;
 }
 
@@ -324,7 +324,7 @@ li {
 }
 
 .video-block {
-  margin-top: 100px;
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
