--- a/pages/lang.css
+++ b/pages/lang.css
@@ -126,7 +126,7 @@ body {
   }
   
   .video-block {
-    margin-top: 60px;
+    margin-bottom: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
