--- a/pages/lang.css
+++ b/pages/lang.css
@@ -10,6 +10,11 @@ body {
   html {
     scroll-behavior: smooth;
   }
+
+  .topic {
+    font-size: 23px;
+    text-align: center;
+  }
   
   
   .content {
@@ -20,7 +25,7 @@ body {
     text-align: left;
     padding-left: 20px;
     padding-right: 20px;
-    margin: 25px 0 30px 0;
+    margin: 10px 0 30px 0;
     line-height: 1.4;
   }
   
