--- a/pages/lira/lira.css
+++ b/pages/lira/lira.css
@@ -21,6 +21,12 @@ body {
     flex-direction: column;
     align-items: center;
   }
+
+  .topic {
+    color: rgb(226, 205, 180);
+    font-size: 23px;
+    text-align: center;
+  }
   
   .content {
     font-family: "Arial", sans-serif;
