--- a/style.css
+++ b/style.css
@@ -21,12 +21,18 @@ header {
   text-align: left;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 25px 0 20px 0;
+  margin: 25px 0 40px 0;
   line-height: 1.4;
 }
 
 .content a {
   color: #a780cb;
+}
+
+.topic {
+  color: rgb(226, 205, 180);
+  font-size: 23px;
+  text-align: center;
 }
 
 .upcontent {
@@ -324,7 +330,7 @@ li {
 }
 
 .video-block {
-  margin-bottom: 40px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
